--- a/README
+++ b/README
@@ -1,3 +1,12 @@
 Read the documentation in qemu-doc.html.
 
 Fabrice Bellard.
+
+=== Hack&Dev notes ===
+
+Example config command:
+
+ ./configure --disable-system --disable-user --target-list=arm-softmmu 
+                 --disable-gcc-check && make -j 3
+
+
